--- a/web/index.html
+++ b/web/index.html
@@ -121,7 +121,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" type="text/css" href="splash/style.css">
 </head>
-<body>
+<body oncontextmenu="return false;">
 <!-- This script installs service_worker.js to provide PWA functionality to
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
