--- a/web/index.html
+++ b/web/index.html
@@ -1,27 +1,65 @@
-<picture id="splash">
-    <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x"
-            media="(prefers-color-scheme: light) or (prefers-color-scheme: no-preference)">
-    <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x" media="(prefers-color-scheme: dark)">
-    <img class="center" src="splash/img/light-1x.png" alt=""/>
-</picture>
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
+    <style>
+        body, html {
+  margin:0;
+  height:100%;
+  background: #ffffff;
+  background-image: url("splash/img/light-background.webp");
+  background-size: 100% 100%;
+}
 
-    <script
-            src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js"
-            type="text/javascript"
-    ></script>
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.contain {
+  display:block;
+  width:100%; height:100%;
+  object-fit: contain;
+}
+
+.stretch {
+  display:block;
+  width:100%; height:100%;
+}
+
+.cover {
+  display:block;
+  width:100%; height:100%;
+  object-fit: cover;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    margin:0;
+    height:100%;
+    background: #ffffff;
+    background-image: url("splash/img/dark-background.webp");
+    background-size: 100% 100%;
+  }
+}
+
+
+
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#317EFB"/>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
     <script type="text/javascript">
         pdfjsLib.GlobalWorkerOptions.workerSrc =
             "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";
         pdfRenderOptions = {
-            // where cmaps are downloaded from
             cMapUrl: "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/",
-            // The cmaps are compressed in the case
             cMapPacked: true,
-            // any other options for pdfjsLib.getDocument.
-            // params: {}
         };
         // To workaround the recent breaking change on Flutter Web, you can set workaround_for_flutter_93615 to true:
         window.workaround_for_flutter_93615 = true;
@@ -30,16 +68,16 @@
     </script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";
-        pdfRenderOptions = {
-            cMapUrl: 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/',
-            cMapPacked: true,
-        }
+    <!--    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>-->
+    <!--    <script type="text/javascript">-->
+    <!--        pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";-->
+    <!--        pdfRenderOptions = {-->
+    <!--            cMapUrl: 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/',-->
+    <!--            cMapPacked: true,-->
+    <!--        }-->
 
 
-    </script>
+    <!--    </script>-->
 
 
     <meta name="google-signin-client_id" content="1066170261563-8qh1unnsqr4mttggt21tvpop6588f504.apps.googleusercontent.com"/>
@@ -99,6 +137,11 @@
         //
 
 
+
+
+
+
+
     </script>
 
 
@@ -119,7 +162,9 @@
 
     <title>smartwind</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" type="text/css" href="splash/style.css">
+    <!--    <link rel="stylesheet" type="text/css" href="splash/style.css">-->
+
+
 </head>
 <body oncontextmenu="return false;">
 <!-- This script installs service_worker.js to provide PWA functionality to
@@ -192,6 +237,18 @@
     }
 
 
+
+
+
+
+
 </script>
 </body>
 </html>
+
+<picture id="splash">
+    <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x"
+            media="(prefers-color-scheme: light) or (prefers-color-scheme: no-preference)">
+    <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x" media="(prefers-color-scheme: dark)">
+    <img class="center" width="200" height="200" src="splash/img/light-1x.png" alt=""/>
+</picture>
