--- a/web/index.html
+++ b/web/index.html
@@ -5,49 +5,49 @@
 <head>
     <style>
         body, html {
-  margin:0;
-  height:100%;
-  background: #ffffff;
-  background-image: url("splash/img/light-background.webp");
-  background-size: 100% 100%;
-}
+            margin: 0;
+            height: 100%;
+            background: #ffffff url("splash/img/light-background.webp");
+            background-size: 100% 100%;
+        }
 
-.center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
+        .center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
 
-.contain {
-  display:block;
-  width:100%; height:100%;
-  object-fit: contain;
-}
+        .contain {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
 
-.stretch {
-  display:block;
-  width:100%; height:100%;
-}
+        .stretch {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
 
-.cover {
-  display:block;
-  width:100%; height:100%;
-  object-fit: cover;
-}
+        .cover {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    margin:0;
-    height:100%;
-    background: #ffffff;
-    background-image: url("splash/img/dark-background.webp");
-    background-size: 100% 100%;
-  }
-}
-
+        @media (prefers-color-scheme: dark) {
+            body {
+                margin: 0;
+                height: 100%;
+                background: #ffffff url("splash/img/dark-background.webp");
+                background-size: 100% 100%;
+            }
+        }
 
 
     </style>
@@ -61,23 +61,11 @@
             cMapUrl: "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/",
             cMapPacked: true,
         };
-        // To workaround the recent breaking change on Flutter Web, you can set workaround_for_flutter_93615 to true:
+        // To work around the recent breaking change on Flutter Web, you can set workaround_for_flutter_93615 to true:
         window.workaround_for_flutter_93615 = true;
 
 
     </script>
-
-
-    <!--    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>-->
-    <!--    <script type="text/javascript">-->
-    <!--        pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";-->
-    <!--        pdfRenderOptions = {-->
-    <!--            cMapUrl: 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/cmaps/',-->
-    <!--            cMapPacked: true,-->
-    <!--        }-->
-
-
-    <!--    </script>-->
 
 
     <meta name="google-signin-client_id" content="1066170261563-8qh1unnsqr4mttggt21tvpop6588f504.apps.googleusercontent.com"/>
@@ -85,64 +73,7 @@
     <link rel="preconnect" href="https://www.gstatic.com">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
-
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>-->
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>-->
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>-->
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>-->
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-messaging.js"></script>-->
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-analytics.js"></script>-->
-    <!--    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>-->
-
-    <!-- Link to pdf.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.7.570/pdf.min.js" async></script>
-
-    <script>
-        // Import the functions you need from the SDKs you need
-        // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js";
-        // import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-analytics.js";
-        // // TODO: Add SDKs for Firebase products that you want to use
-        // // https://firebase.google.com/docs/web/setup#available-libraries
-        //
-        // // Your web app's Firebase configuration
-        // // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        // const firebaseConfig = {
-        //   apiKey: "AIzaSyCgW6bXgp0PmoKNcAUsAzTqOS8YYFPd0dM",
-        //   authDomain: "smart-wind.firebaseapp.com",
-        //   databaseURL: "https://smart-wind-default-rtdb.firebaseio.com",
-        //   projectId: "smart-wind",
-        //   storageBucket: "smart-wind.appspot.com",
-        //   messagingSenderId: "27155477934",
-        //   appId: "1:27155477934:web:1ff8578ac037a6e330043f",
-        //   measurementId: "G-SEBNEV8XVM"
-        // };
-        //
-        // // Initialize Firebase
-        // const app = initializeApp(firebaseConfig);
-        // const analytics = getAnalytics(app);
-        //
-        //       const messaging = firebase.messaging();
-        //       messaging.onBackgroundMessage(function (payload) {
-        //           console.log('Received background message ', payload);
-        //
-        //           const notificationTitle = payload.notification.title;
-        //           const notificationOptions = {
-        //               body: payload.notification.body,
-        //           };
-        //
-        //           self.registration.showNotification(notificationTitle,
-        //               notificationOptions);
-        //       });
-        //
-        //
-
-
-
-
-
-
-
-    </script>
 
 
     <base href="$FLUTTER_BASE_HREF">
@@ -163,7 +94,7 @@
     <title>smartwind</title>
     <link rel="manifest" href="manifest.json">
     <!--    <link rel="stylesheet" type="text/css" href="splash/style.css">-->
-
+    <script src="flutter.js" defer></script>
 
 </head>
 <body oncontextmenu="return false;">
@@ -171,15 +102,15 @@
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
 <script>
-    var serviceWorkerVersion = null;
-    var scriptLoaded = false;
+    const serviceWorkerVersion = null;
+    let scriptLoaded = false;
 
     function loadMainDartJs() {
         if (scriptLoaded) {
             return;
         }
         scriptLoaded = true;
-        var scriptTag = document.createElement('script');
+        const scriptTag = document.createElement('script');
         scriptTag.src = 'main.dart.js';
         scriptTag.type = 'application/javascript';
         document.body.append(scriptTag);
@@ -191,7 +122,7 @@
             // Wait for registration to finish before dropping the <script> tag.
             // Otherwise, the browser will load the script multiple times,
             // potentially different versions.
-            var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
+            const serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
             navigator.serviceWorker.register(serviceWorkerUrl)
                 .then((reg) => {
                     function waitForActivation(serviceWorker) {
@@ -224,9 +155,7 @@
             // fallback to plaint <script> tag.
             setTimeout(() => {
                 if (!scriptLoaded) {
-                    console.warn(
-                        'Failed to load app from service worker. Falling back to plain <script> tag.',
-                    );
+                    console.warn('Failed to load app from service worker. Falling back to plain <script> tag.');
                     loadMainDartJs();
                 }
             }, 4000);
@@ -238,7 +167,21 @@
 
 
 
+</script>
 
+
+<script>
+    window.addEventListener('load', function (ev) {
+        const loading = document.querySelector('#loading');
+        loading.textContent = "Loading entrypoint...";
+        _flutter.loader.loadEntrypoint({serviceWorker: {serviceWorkerVersion: serviceWorkerVersion}}).then(function (engineInitializer) {
+            loading.textContent = "Initializing engine...";
+            return engineInitializer.initializeEngine();
+        }).then(function (appRunner) {
+            loading.textContent = "Running app...";
+            return appRunner.runApp();
+        });
+    });
 
 
 
@@ -250,5 +193,13 @@
     <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x"
             media="(prefers-color-scheme: light) or (prefers-color-scheme: no-preference)">
     <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x" media="(prefers-color-scheme: dark)">
-    <img class="center" width="200" height="200" src="splash/img/light-1x.png" alt=""/>
+
+    <div class="center" style="width: 300px; height: 300px;background-color: rgba(255, 255, 255, .15);
+ backdrop-filter: blur(5px); border-radius: 24px">
+        <img class="center" width="170" height="170" style=" " src="splash/img/light-1x.png" alt=""/>
+        <div style="padding-top: 220px;font-family: Arial,sans-serif;  color: black;"
+             class="center" id="loading"></div>
+
+    </div>
+
 </picture>
