--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#317EFB"/>
-    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
+    <script src="js/pdf.js" type="text/javascript"></script>
     <script type="text/javascript">
         pdfjsLib.GlobalWorkerOptions.workerSrc =
             "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";
@@ -70,10 +70,10 @@
 
     <meta name="google-signin-client_id" content="1066170261563-8qh1unnsqr4mttggt21tvpop6588f504.apps.googleusercontent.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=3.0">
-    <link rel="preconnect" href="https://www.gstatic.com">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <!--    <link rel="preconnect" href="https://www.gstatic.com">-->
+    <!--    <link rel="preconnect" href="https://cdnjs.cloudflare.com">-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.7.570/pdf.min.js" async></script>
+    <script src="./js/pdf.min.js" async></script>
 
 
     <base href="$FLUTTER_BASE_HREF">
@@ -108,8 +108,6 @@
                 return appRunner.runApp();
             });
         });
-
-
 
 
     </script>
@@ -183,7 +181,6 @@
         // Service workers not supported. Just drop the <script> tag.
         loadMainDartJs();
     }
-
 
 
 </script>
