--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#317EFB"/>
-    <script src="js/pdf.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
     <script type="text/javascript">
         pdfjsLib.GlobalWorkerOptions.workerSrc =
             "https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.min.js";
@@ -44,15 +44,16 @@
         window.workaround_for_flutter_93615 = true;
 
 
+
     </script>
 
 
     <meta name="google-signin-client_id" content="1066170261563-8qh1unnsqr4mttggt21tvpop6588f504.apps.googleusercontent.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=3.0">
-    <!--    <link rel="preconnect" href="https://www.gstatic.com">-->
+    <link rel="preconnect" href="https://www.gstatic.com">
     <!--    <link rel="preconnect" href="https://cdnjs.cloudflare.com">-->
-
-    <script src="./js/pdf.min.js" async></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.5.207/pdf.min.js"></script>
 
 
     <base href="/">
@@ -159,6 +160,7 @@
     //     loadMainDartJs();
     // }
     //
+
     function deleteAllCookies() {
         const cookies = document.cookie.split(";");
 
@@ -171,7 +173,9 @@
         window.location.reload();
 
         console.log('reload');
+
     }
+
 
 
 
@@ -198,6 +202,20 @@
             return appRunner.runApp();
         });
     });
+
+
+
+</script>
+<script>
+    async function download() {
+        var pdfAsDataUri = "data:application/pdf;base64, " + pdfData;
+        var link = document.createElement('a');
+        link.download = filename;
+        link.href = pdfAsDataUri;
+        link.type = 'application/pdf';
+        link.click();
+    }
+
 
 </script>
 
